--- a/jspWithServlet/.settings/org.eclipse.wst.common.component
+++ b/jspWithServlet/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="jspWithServlet">
+        
+    <wb-module deploy-name="Button Readings in jsp">
+                
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="jspWithServlet"/>
-        <property name="java-output-path" value="/jspWithServlet/build/classes"/>
+                
+        <property name="java-output-path" value="/Button Readings in jsp/build/classes"/>
+        <property name="context-root" value="Button Readings in jsp"/>
+            
     </wb-module>
+    
 </project-modules>
